# adaption-ai-lab

./: .gitignore  DATASET_CARD.md  MODEL_CARD.md  README.md  RESULTS.md  SUBMISSION.md  VIZ_DATASET_CARD.md  VIZ_MODEL_CARD.md  config.yaml  dataset_card_template.md  model_card_template.md  pyproject.toml  requirements.txt
app/: README.md  app.py  requirements.txt
autoscientist_toolcaller/: ablation.py  agent.py  agent_tools.py  agentic.py  baseline.py  bfcl_handler.py  build_dataset.py  build_preference.py  claude_judge.py  cli.py  curriculum.py  decontaminate.py  demo_platform.py  envs.py  error_analysis.py  eval_agentic.py  eval_bfcl.py  eval_decompose.py  eval_harness.py  eval_multilingual.py  eval_report.py  eval_stats.py  eval_tool_selection.py  export_bfcl.py  export_gguf.py  fetch_improved.py  fill_model_card.py  format_twins.py  format_utils.py  manifest.py  quality_filter.py  recipe_ablation.py  release.py  reliability_probe.py  results_table.py  robustness_table.py  schema_drift.py  synth_llm.py  tool_retrieval.py  train_adaption.py  (+1 more)
docs/: AUTOSCIENTIST_DEMO.md  AUTOSCIENTIST_USAGE.md  CONSOLE_STEPS.md  DATASHEET.md  DATA_QUALITY_AUDIT.md  DEPLOY.md  GPU_TRAIN.md  PART2_SUBMISSION.md  PUBLISHING.md  RESEARCH.md  RUN_DAY.md  WINNING.md  paper.md  social_posts.md
results/: adaption_run.json  recipe_ablation.json  recipe_ablation.md
scripts/: _monitor_run.py  finalize.sh  finalize_viz.sh  kaggle_train.ipynb  run_all.sh  train_lora.py
site/: index.html
src/: ablation.py  baseline.py  bfcl_handler.py  build_dataset.py  build_preference.py  claude_judge.py  cli.py  curriculum.py  decontaminate.py  dedup.py  envs.py  error_analysis.py  eval_bfcl.py  eval_decompose.py  eval_harness.py  eval_multilingual.py  eval_report.py  eval_stats.py  export_bfcl.py  export_gguf.py  fetch_improved.py  fill_model_card.py  format_utils.py  hard_negatives.py  manifest.py  multilingual.py  multiturn.py  reasoning.py  recipe_ablation.py  release.py  reliability_probe.py  robustness_table.py  schema_drift.py  schema_validator.py  train_adaption.py  train_dpo.py
(+78 files in other folders)
